--- a/mvCommerce/wwwroot/css/site.css
+++ b/mvCommerce/wwwroot/css/site.css
@@ -32,19 +32,31 @@ button {
 
 #formMenu input[type= "text"] {
     border: 0;
-    color: white;
+    color: black;
     background: none;
+    background-color:white;
+    opacity:0.7;
     text-align: center;
-    border: 2px solid #ffbe76;
+    border: none;
     padding: 14px 10px;
-    width: 250px;
+    width: 650px;
+    height:50px;
     outline: none;
     transition: 0.25s;
+    border-radius:10px 0px 0px 10px;
+}
+#searchButton {
+    border: none;
+    background-color: white;
+    opacity: 0.7;
+    width: 80px;
+    height: 50px;
+    box-shadow: none;
+    float: right;
+    padding: 5px 10px;
+    border-radius: 0px 10px 10px 0px;
 }
 
-#formMenu input[type="text"]:focus {
-    width: 350px;
-}
 .search::-webkit-input-placeholder {
     color: black;
 }
